Change history for Perl extension PDF::Table.

=== Version 1.004 (2022-10-05)   UNRELEASED

* determine why chess.pl example has font problems with PDF::API2. incompatible
  changes in latest API2 release? add full work-around for API2

* consider whether to do code block here or via PDF::Builder

  examples/*.pl
   If command line -A or -B, add prefix A_ or B_ to the output file name. This
    can be useful when using -A or -B with util/3_examples.pl to generate
    different output PDFs for PDF::API2 and PDF::Builder. Keep in mind that an
    example given without -A or -B will not add the prefix.

  lib/PDF/Table.pm, lib/PDF/Table.pod, INFO/Table.html, 
    examples/vsizes.pl (new), util/3_examples.pl
   Dry run to return vertical size (overall, header, [footer], each row),
    no output to PDF, with "ink" set to 0.

  lib/PDF/Table.pod (moved), MANIFEST, util/pod2cpanhtml.pl, Makefile.PL
   Move .pod up a level (thanks to "perlpunk")

  lib/PDF/Table/Table.pod, INFO/Table.html, examples/chess.pl,
    INFO/Changes_2019, lib/PDF/Table.pm
   Typos caught by lintian (via emollier) and codespell (via mdeweerd).

 CONTRIBUTING, MANIFEST  add Contribution guide

=== Version 1.003 (2022-07-05)

 lib/PDF/Table/ColumnWidth.pm, lib/PDF/Table/Table.pod, examples/size.pl,
   MANIFEST, util/3_examples.pl
  Add the ability to specify fixed and relative sizes for column widths, 
   rather than having to accept system-calculated widths. You give a string
   to the 'size' optional global setting specifying the absolute width of
   a column (in, pt, cm, mm, em, or ex units), and/or a unit of '*' to 
   indicate remaining space is to be split up among these columns.

 lib/PDF/Table.pm, lib/PDF/Table/Settings.pm, MANIFEST
  Split out deprecated_settings and check_settings functions into new file.

 lib/PDF/Table.pm, lib/PDF/Table/ColumnWidth.pm, MANIFEST, t/PDF-Table.t
  Split out CalcColumnWidths function into new file.

 examples/chess.pl