@@ -2,10 +2,17 @@ Change history for Perl extension PDF::Table.
 
 === Version 1.004 (2022-10-05)   UNRELEASED
 
-* determine why chess.pl example has font problems with PDF::API2. incompatible
-  changes in latest API2 release? add full work-around for API2
-
 * consider whether to do code block here or via PDF::Builder
+
+  examples/chess.pl
+   PDF::API2 (at least, as of current release 2.043) has a bug in its TTF
+    handling, where it fails to translate some Unicode points ("U+nnnn" number)
+    to the appropriate font glyph entry, and instead puts the Unicode point
+    in the glyph list. This is incorrect, and usually results in a mismapping.
+    There may also be a problem with font sizing, where it was necessary to
+    cut the font size by more than 50%. Therefore, for the time being, the
+    PDF::API2 output for chess.pl (a sample chess game with pieces), is
+    disabled.
 
   examples/*.pl
    If command line -A or -B, add prefix A_ or B_ to the output file name. This
